.metadata/.plugins/org.eclipse.cdt.ui/03-21Static.build.log
14:47:31 **** Incremental Build of configuration Debug for project 03-21Static ****
make all 
Building file: ../src/03-21Static.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/03-21Static.d" -MT"src/03-21Static.o" -o "src/03-21Static.o" "../src/03-21Static.cpp"
In file included from ../src/03-21Static.cpp:11:0:
../src/MyClass.h:30:1: error: expected ‘;’ after class definition
 }
 ^
make: *** [src/03-21Static.o] Error 1

14:47:31 Build Finished (took 544ms)

